--- a/index.html
+++ b/index.html
@@ -1,60 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Neurones Noirs – Run</title>
   <script src="https://cdn.jsdelivr.net/npm/three@0.168.0/build/three.min.js"></script>
   <style>
-    body { margin:0; overflow:hidden; background:#000; font-family:Arial,sans-serif; touch-action:none; user-select:none; }
+    body { margin:0; overflow:hidden; background:#000; font-family:Arial,sans-serif; touch-action:none; }
     #ui {
-      position:absolute; top:10px; left:15px; color:white; font-size:24px; font-weight:bold;
-      text-shadow:0 0 6px black, 0 0 12px black; pointer-events:none; z-index:10;
+      position:absolute; top:10px; left:10px; color:#fff; font-size:22px; font-weight:bold;
+      background:rgba(0,0,0,0.6); padding:8px 12px; border-radius:6px; z-index:10;
     }
-    #shopBtn {
-      position:absolute; top:10px; right:15px; padding:8px 16px; background:#3366ff; color:white;
-      border:none; border-radius:8px; font-size:20px; cursor:pointer; z-index:10;
-      box-shadow:0 0 10px #3366ff;
-    }
-    #shop {
-      position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);
-      background:rgba(0,0,0,0.9); border:3px solid #00ff88; border-radius:12px;
-      color:#00ff88; padding:25px; max-width:340px; text-align:center;
-      display:none; z-index:25; box-shadow:0 0 30px #00ff88 inset;
-    }
-    #shop button {
-      margin:8px; padding:10px 20px; background:#00ff88; color:black;
-      border:none; border-radius:6px; cursor:pointer; font-size:16px;
-    }
-    #closeShop { background:#ff4444; color:white; }
     #gameOver {
-      position:absolute; inset:0; background:rgba(0,0,0,0.85); color:#ff4444; font-size:80px; font-weight:bold;
-      display:flex; flex-direction:column; align-items:center; justify-content:center;
-      text-shadow:0 0 15px black; z-index:20; display:none;
+      position:absolute; inset:0; background:rgba(0,0,0,0.85); color:#ff4444; font-size:70px; font-weight:bold;
+      display:flex; flex-direction:column; align-items:center; justify-content:center; z-index:20; display:none;
     }
-    #gameOver button {
-      margin-top:40px; padding:16px 60px; font-size:36px; background:#22ff44; color:black;
-      border:none; border-radius:12px; cursor:pointer; box-shadow:0 0 20px #22ff44;
+    #restart {
+      margin-top:30px; padding:15px 50px; font-size:30px; background:#0f0; color:#000;
+      border:none; border-radius:10px; cursor:pointer; box-shadow:0 0 15px #0f0;
     }
     #jumpBtn {
-      position:fixed; bottom:50px; right:50px; width:110px; height:110px;
-      background:rgba(255,140,0,0.75); border:none; border-radius:999px; color:white;
-      font-size:60px; font-weight:bold; z-index:15; box-shadow:0 8px 25px rgba(0,0,0,0.6);
-      touch-action:manipulation;
+      position:fixed; bottom:40px; right:40px; width:100px; height:100px;
+      background:rgba(255,100,0,0.8); border:none; border-radius:50%; color:#fff;
+      font-size:50px; font-weight:bold; z-index:15; box-shadow:0 0 20px #ff6000;
     }
-    #jumpBtn:active { transform:scale(0.92); background:rgba(255,180,60,0.95); }
+    #jumpBtn:active { transform:scale(0.92); }
   </style>
 </head>
 <body>
 
 <div id="ui">Score: <span id="score">0</span> – Coins: <span id="coins">0</span></div>
-<button id="shopBtn">Shop</button>
-
-<div id="shop">
-  <h2>Shop Skins</h2>
-  <div id="skinsList"></div>
-  <button id="closeShop">Fermer</button>
-</div>
 
 <div id="gameOver">
   GAME OVER
@@ -64,313 +39,119 @@
 <button id="jumpBtn">↑</button>
 
 <script>
-const scene = new THREE.Scene();
-scene.background = new THREE.Color(0x220033);
-scene.fog = new THREE.FogExp2(0x110022, 0.002);
+console.log("Jeu lancé – vérifie la console F12");
 
-const camera = new THREE.PerspectiveCamera(70, innerWidth / innerHeight, 0.1, 2000);
+const scene = new THREE.Scene();
+scene.background = new THREE.Color(0x112244); // Gris-bleu foncé mais visible
+
+const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 2000);
 camera.position.set(0, 5, 12);
 
-const renderer = new THREE.WebGLRenderer({antialias: true});
-renderer.setSize(innerWidth, innerHeight);
-renderer.shadowMap.enabled = true;
+const renderer = new THREE.WebGLRenderer({antialias: false});
+renderer.setSize(window.innerWidth, window.innerHeight);
+renderer.setClearColor(0x112244, 1);
 document.body.appendChild(renderer.domElement);
 
-scene.add(new THREE.AmbientLight(0xffffff, 0.7));
-const sun = new THREE.DirectionalLight(0xffeecc, 1.3);
-sun.position.set(20, 40, 15);
-sun.castShadow = true;
-scene.add(sun);
+scene.add(new THREE.AmbientLight(0xffffff, 1.5));
+scene.add(new THREE.DirectionalLight(0xffffff, 1.2).position.set(10, 20, 10));
+
+// Joueur rouge vif
+const player = new THREE.Mesh(
+  new THREE.BoxGeometry(1.6, 2.2, 1.6),
+  new THREE.MeshStandardMaterial({color: 0xff0000})
+);
+player.position.y = 1.1;
+scene.add(player);
+
+// Sol blanc
+const ground = new THREE.Mesh(
+  new THREE.PlaneGeometry(20, 300),
+  new THREE.MeshStandardMaterial({color: 0xdddddd})
+);
+ground.rotation.x = -Math.PI / 2;
+ground.position.z = -100;
+scene.add(ground);
 
 // Variables
 let score = 0;
-let coins = parseInt(localStorage.getItem("nn_coins") || "0");
-let currentSkin = localStorage.getItem("nn_skin") || "0xffdd00";
-let speed = 0.22;
-let gameRunning = true;
-
-document.getElementById("coins").textContent = coins;
-
-// Joueur
-const playerGroup = new THREE.Group();
-scene.add(playerGroup);
-
-const playerMaterial = new THREE.MeshStandardMaterial({color: parseInt(currentSkin)});
-
-const body = new THREE.Mesh(
-  new THREE.BoxGeometry(1.3, 1.8, 1.4),
-  playerMaterial
-);
-body.position.y = 0.9;
-body.castShadow = true;
-playerGroup.add(body);
-
-const head = new THREE.Mesh(
-  new THREE.SphereGeometry(0.65, 16, 16),
-  playerMaterial
-);
-head.position.y = 2.0;
-playerGroup.add(head);
-
-playerGroup.position.set(0, 0, 0);
-
-let currentLane = 0;
-let targetLane = 0;
+let coins = parseInt(localStorage.getItem('nn_coins') || '0');
 let velocityY = 0;
 let isJumping = false;
+let gameRunning = true;
 
-// Voies
-const LANE_POS = [-3.5, 0, 3.5];
-const trackPieces = [];
+document.getElementById('coins').textContent = coins;
 
-for (let i = 0; i < 40; i++) {
-  const floor = new THREE.Mesh(
-    new THREE.PlaneGeometry(18, 12),
-    new THREE.MeshStandardMaterial({color: 0x222233})
-  );
-  floor.rotation.x = -Math.PI / 2;
-  floor.position.z = -i * 12;
-  floor.receiveShadow = true;
-  scene.add(floor);
-  trackPieces.push(floor);
-
-  [-1, 1].forEach(side => {
-    const rail = new THREE.Mesh(
-      new THREE.BoxGeometry(1.2, 0.4, 12.5),
-      new THREE.MeshStandardMaterial({color: 0x555577, metalness: 0.7})
-    );
-    rail.position.set(side * 5.8, 0.2, -i * 12);
-    scene.add(rail);
-    trackPieces.push(rail);
-  });
-}
-
-// Obstacles & pièces
-const obstacles = [];
-const collectibles = [];
-
-function spawnObstacle() {
-  if (!gameRunning) return;
-  const lane = Math.floor(Math.random() * 3) - 1;
-  const tall = Math.random() < 0.4;
-
-  const obs = new THREE.Mesh(
-    new THREE.BoxGeometry(tall ? 4.5 : 3.8, tall ? 5.5 : 2.8, 5),
-    new THREE.MeshStandardMaterial({color: 0xdd0000, emissive: 0x880000})
-  );
-  obs.position.set(LANE_POS[lane + 1], tall ? 2.75 : 1.4, -80 - Math.random() * 60);
-  obs.castShadow = true;
-  scene.add(obs);
-  obstacles.push({mesh: obs, tall});
-}
-
-function spawnCoin() {
-  if (!gameRunning) return;
-  const lane = Math.floor(Math.random() * 3) - 1;
-  const coin = new THREE.Mesh(
-    new THREE.SphereGeometry(0.9, 16, 16),
-    new THREE.MeshStandardMaterial({color: 0xffff00, emissive: 0xffff44, emissiveIntensity: 1.2})
-  );
-  coin.position.set(LANE_POS[lane + 1], 2.5 + Math.random()*1.5, -90 - Math.random()*80);
-  scene.add(coin);
-  collectibles.push(coin);
-}
-
-// Shop
-const skins = [
-  {name: "Jaune", color: 0xffdd00, price: 0},
-  {name: "Rouge", color: 0xff4444, price: 50},
-  {name: "Bleu", color: 0x4488ff, price: 100},
-  {name: "Vert", color: 0x44ff88, price: 200}
-];
-
-const shopBtn = document.getElementById("shopBtn");
-const shopDiv = document.getElementById("shop");
-const skinsList = document.getElementById("skinsList");
-const closeShop = document.getElementById("closeShop");
-
-shopBtn.onclick = () => {
-  if (!gameRunning) return;
-  shopDiv.style.display = "block";
-  skinsList.innerHTML = "";
-  skins.forEach((s, i) => {
-    const owned = s.price === 0 || localStorage.getItem("nn_skin_" + i) === "true";
-    const equipped = parseInt(currentSkin) === s.color;
-    let btn = equipped ? "Équipé" : owned ? "Équiper" : `Acheter (${s.price})`;
-    skinsList.innerHTML += `<p>${s.name} <button onclick="equipOrBuy(${i})">${btn}</button></p>`;
-  });
-};
-
-closeShop.onclick = () => shopDiv.style.display = "none";
-
-window.equipOrBuy = function(idx) {
-  const s = skins[idx];
-  if (s.price === 0 || localStorage.getItem("nn_skin_" + idx) === "true") {
-    currentSkin = s.color.toString(16);
-    localStorage.setItem("nn_skin", currentSkin);
-    playerMaterial.color.setHex(s.color);
-  } else if (coins >= s.price) {
-    coins -= s.price;
-    localStorage.setItem("nn_coins", coins);
-    localStorage.setItem("nn_skin_" + idx, "true");
-    document.getElementById("coins").textContent = coins;
-    currentSkin = s.color.toString(16);
-    localStorage.setItem("nn_skin", currentSkin);
-    playerMaterial.color.setHex(s.color);
-  }
-  shopBtn.click(); // refresh shop
-};
-
-// Contrôles (comme avant)
-document.getElementById("jumpBtn").addEventListener("pointerdown", e => {
+// Contrôles
+document.getElementById('jumpBtn').addEventListener('pointerdown', e => {
   e.preventDefault();
   if (gameRunning && !isJumping) {
-    velocityY = 0.38;
+    velocityY = 0.45;
     isJumping = true;
   }
 });
 
-document.addEventListener("keydown", e => {
+document.addEventListener('keydown', e => {
   if (!gameRunning) return;
-  if (e.code === "Space" || e.code === "ArrowUp") {
+  if (e.code === 'Space') {
     e.preventDefault();
     if (!isJumping) {
-      velocityY = 0.38;
+      velocityY = 0.45;
       isJumping = true;
     }
   }
-  if (e.code === "ArrowLeft" && targetLane > -1) targetLane--;
-  if (e.code === "ArrowRight" && targetLane < 1) targetLane++;
 });
 
-let touchStartX = 0;
-document.addEventListener("touchstart", e => {
-  touchStartX = e.touches[0].clientX;
-}, {passive:false});
-
-document.addEventListener("touchend", e => {
-  const dx = e.changedTouches[0].clientX - touchStartX;
-  if (Math.abs(dx) > 60) {
-    if (dx > 0 && targetLane < 1) targetLane++;
-    if (dx < 0 && targetLane > -1) targetLane--;
-  }
-}, {passive:false});
-
-// Boucle (comme avant, sans changements majeurs)
+// Boucle simple
 function animate() {
-  if (!gameRunning) return requestAnimationFrame(animate);
-
   requestAnimationFrame(animate);
 
-  const move = speed;
+  if (!gameRunning) return;
 
-  currentLane += (targetLane - currentLane) * 0.28;
-  playerGroup.position.x = THREE.MathUtils.lerp(playerGroup.position.x, LANE_POS[Math.round(currentLane)], 0.22);
-
-  velocityY -= 0.022;
-  playerGroup.position.y += velocityY;
-  if (playerGroup.position.y <= 0) {
-    playerGroup.position.y = 0;
+  // Saut
+  velocityY -= 0.025;
+  player.position.y += velocityY;
+  if (player.position.y <= 1.1) {
+    player.position.y = 1.1;
     velocityY = 0;
     isJumping = false;
   }
 
-  trackPieces.forEach(p => {
-    p.position.z += move;
-    if (p.position.z > 50) p.position.z -= 480;
-  });
+  // Défilement
+  ground.position.z += 0.35;
+  if (ground.position.z > 50) ground.position.z = -250;
 
-  obstacles.forEach((o, i) => {
-    o.mesh.position.z += move;
-    if (o.mesh.position.z > 20) {
-      scene.remove(o.mesh);
-      obstacles.splice(i, 1);
-    }
-  });
-
-  collectibles.forEach((c, i) => {
-    c.position.z += move;
-    c.rotation.y += 0.08;
-    if (c.position.z > 20) {
-      scene.remove(c);
-      collectibles.splice(i, 1);
-    }
-  });
-
-  let crashed = false;
-  for (let o of obstacles) {
-    const dx = Math.abs(playerGroup.position.x - o.mesh.position.x);
-    const dy = Math.abs(playerGroup.position.y - o.mesh.position.y);
-    const dz = Math.abs(playerGroup.position.z - o.mesh.position.z);
-    if (dx < 2.6 && dz < 3.2 && dy < (o.tall ? 4 : 2.5)) {
-      crashed = true;
-      break;
-    }
-  }
-
-  if (crashed) {
-    gameRunning = false;
-    document.getElementById("gameOver").style.display = "flex";
-  }
-
-  for (let i = collectibles.length - 1; i >= 0; i--) {
-    const c = collectibles[i];
-    if (Math.hypot(
-      playerGroup.position.x - c.position.x,
-      playerGroup.position.y - c.position.y,
-      playerGroup.position.z - c.position.z
-    ) < 2.5) {
-      coins++;
-      localStorage.setItem("nn_coins", coins);
-      document.getElementById("coins").textContent = coins;
-      scene.remove(c);
-      collectibles.splice(i, 1);
-    }
-  }
-
-  score += speed * 18;
-  document.getElementById("score").textContent = Math.floor(score);
-  speed += 0.00008;
-
-  camera.position.x = playerGroup.position.x * 0.3;
-  camera.position.y = playerGroup.position.y + 5;
-  camera.position.z = playerGroup.position.z + 12;
-  camera.lookAt(playerGroup.position.x, playerGroup.position.y + 3, playerGroup.position.z - 30);
+  // Caméra suit
+  camera.position.z = player.position.z + 12;
+  camera.lookAt(player.position);
 
   renderer.render(scene, camera);
+
+  score += 1;
+  document.getElementById('score').textContent = score;
 }
 
-// Spawns
-setInterval(() => gameRunning && Math.random() < 0.75 && spawnObstacle(), 1400);
-setInterval(() => gameRunning && spawnCoin(), 2200);
+animate();
 
 // Restart
-document.getElementById("restart").onclick = () => {
+document.getElementById('restart').onclick = () => {
   gameRunning = true;
   score = 0;
-  speed = 0.22;
-  targetLane = currentLane = 0;
   velocityY = 0;
   isJumping = false;
-  playerGroup.position.set(0, 0, 0);
-
-  obstacles.forEach(o => scene.remove(o.mesh));
-  collectibles.forEach(c => scene.remove(c));
-  obstacles.length = collectibles.length = 0;
-
-  document.getElementById("gameOver").style.display = "none";
-  document.getElementById("score").textContent = "0";
-
+  player.position.y = 1.1;
+  document.getElementById('gameOver').style.display = 'none';
+  document.getElementById('score').textContent = '0';
   animate();
 };
 
-window.addEventListener("resize", () => {
-  camera.aspect = innerWidth / innerHeight;
+// Resize
+window.addEventListener('resize', () => {
+  camera.aspect = window.innerWidth / window.innerHeight;
   camera.updateProjectionMatrix();
-  renderer.setSize(innerWidth, innerHeight);
+  renderer.setSize(window.innerWidth, window.innerHeight);
 });
 
-animate();
+console.log("Tout est lancé – tu devrais voir un fond gris-bleu, un cube rouge et un sol blanc qui avance");
 </script>
 </body>
 </html>
