--- a/index.html
+++ b/index.html
@@ -2,166 +2,128 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>La Flamme - Zen</title>
+<title>Sébastien La merguez — IA chat</title>
+
 <style>
-/* Reset global */
-* { margin:0; padding:0; box-sizing:border-box; font-family:'Helvetica Neue', Arial, sans-serif; }
-html, body { height:100%; background:#1b1d22; color:#fff; scroll-behavior:smooth; }
-body { display:flex; flex-direction:column; align-items:center; justify-content:flex-start; }
+body {
+  background:#0b0b0b;
+  color:#e6e6e6;
+  font-family: monospace;
+  max-width:900px;
+  margin:auto;
+  padding:20px;
+}
+h1 { margin-bottom:5px }
+.subtitle { opacity:.6; margin-bottom:15px }
 
-/* Header */
-header { width:100%; position:fixed; top:0; left:0; background:rgba(27,29,34,0.85); backdrop-filter:blur(8px); z-index:100; display:flex; justify-content:center; padding:15px 0; box-shadow:0 2px 10px rgba(0,0,0,0.5);}
-header h1 { font-size:3rem; color:#ffd700; letter-spacing:2px; }
-
-/* Section général */
-section { width:100%; max-width:1200px; padding:120px 20px 60px 20px; display:flex; flex-direction:column; align-items:center; text-align:center; }
-
-/* Flamme animée */
-.candle-container { position:relative; display:flex; flex-direction:column; align-items:center; margin-bottom:50px; }
-.candle { position:relative; width:28px; height:140px; background:#eee; border-radius:14px; box-shadow:0 0 15px rgba(255,255,255,0.2); }
-.flame { position:absolute; top:-60px; left:50%; transform:translateX(-50%); width:28px; height:60px;
-  background: radial-gradient(circle at 50% 50%, #fff 0%, #ffd700 60%, #ff4500 100%);
-  border-radius:50%; animation:flicker 1s infinite alternate; filter:blur(2px); }
-@keyframes flicker {
-0% { transform:translateX(-50%) scale(1,1); opacity:0.8; }
-25% { transform:translateX(-50%) scale(1.15,0.9); opacity:1; }
-50% { transform:translateX(-50%) scale(0.9,1.2); opacity:0.9; }
-75% { transform:translateX(-50%) scale(1,1.05); opacity:1; }
-100% { transform:translateX(-50%) scale(1,1); opacity:0.8; }
+#chat {
+  background:#111;
+  border:1px solid #222;
+  padding:15px;
+  height:420px;
+  overflow-y:auto;
 }
 
-/* Parallax background */
-.parallax { position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; overflow:hidden; }
-.parallax div { position:absolute; border-radius:50%; opacity:0.05; }
+.msg-user { color:#7CFC00; margin:6px 0 }
+.msg-ia { color:#00BFFF; margin:6px 0 }
+.msg-system { color:#888; font-style:italic }
 
-/* Texte zen */
-p { max-width:650px; line-height:1.8; color:rgba(255,255,255,0.9); font-size:1.2rem; margin-bottom:50px; }
+.controls {
+  margin-top:10px;
+  display:flex;
+  gap:10px;
+}
 
-/* Shop bougies */
-.candles-shop { display:flex; flex-direction:column; align-items:center; max-height:250px; overflow-y:auto; gap:15px; padding:10px;
- border-top:1px solid rgba(255,255,255,0.2); border-bottom:1px solid rgba(255,255,255,0.2); width:180px; }
-.candles-shop img { width:60px; cursor:pointer; transition: transform 0.2s, box-shadow 0.2s; border-radius:10px; }
-.candles-shop img:hover { transform:scale(1.3); box-shadow:0 0 25px rgba(255,255,180,0.8); }
-.candles-shop::-webkit-scrollbar { width:6px; }
-.candles-shop::-webkit-scrollbar-thumb { background:rgba(255,255,255,0.3); border-radius:3px; }
-.candles-shop::-webkit-scrollbar-track { background:transparent; }
+input {
+  flex:1;
+  padding:10px;
+  background:#111;
+  border:1px solid #333;
+  color:#fff;
+}
 
-/* Section About */
-.about { margin-top:50px; }
-.about h2 { font-size:2.5rem; color:#ffd700; margin-bottom:20px; }
-.about p { font-size:1.15rem; }
-
-/* Section Galerie */
-.gallery { margin-top:50px; display:flex; flex-wrap:wrap; justify-content:center; gap:20px; }
-.gallery img { width:200px; border-radius:12px; transition: transform 0.3s, box-shadow 0.3s; cursor:pointer; }
-.gallery img:hover { transform:scale(1.05); box-shadow:0 0 20px rgba(255,255,180,0.6); }
-
-/* Section Contact */
-.contact { margin-top:50px; width:100%; display:flex; flex-direction:column; align-items:center; }
-.contact h2 { font-size:2.2rem; color:#ffd700; margin-bottom:20px; }
-.contact form { display:flex; flex-direction:column; gap:15px; width:300px; }
-.contact input, .contact textarea { padding:10px; border-radius:8px; border:none; font-size:1rem; }
-.contact button { padding:12px; border:none; border-radius:8px; background:#ffd700; color:#1b1d22; font-weight:700; cursor:pointer; transition:0.2s; }
-.contact button:hover { transform:scale(1.05); }
-
-/* Footer */
-footer { margin-top:60px; padding:20px; text-align:center; font-size:0.9rem; color:rgba(255,255,255,0.6); }
-
-/* Responsive */
-@media(max-width:768px){
-  h1{ font-size:2.5rem; }
-  .candle{ width:22px; height:110px; }
-  .flame{ width:22px; height:50px; }
-  p{ font-size:1rem; }
-  .candles-shop{ width:150px; max-height:200px; }
-  .candles-shop img{ width:50px; }
-  .gallery img{ width:150px; }
-  .contact form{ width:250px; }
+button {
+  padding:10px 15px;
+  background:#222;
+  border:1px solid #444;
+  color:white;
+  cursor:pointer;
 }
 </style>
 </head>
+
 <body>
 
-<header><h1>La Flamme</h1></header>
+<h1>🧠 Sébastien La merguez</h1>
+<div class="subtitle">Chat public · IA locale · discussion instantanée</div>
 
-<div class="parallax" id="parallax"></div>
+<div id="chat"></div>
 
-<section>
-  <div class="candle-container">
-    <div class="candle">
-      <div class="flame"></div>
-    </div>
-  </div>
-  <p>Un espace zen et minimaliste, inspiré par la lumière douce et la sérénité. Respirez profondément et laissez-vous apaiser.</p>
-
-  <div class="candles-shop" id="candlesShop">
-    <img src="https://cdn-icons-png.flaticon.com/512/2589/2589875.png" alt="Bougie 1" title="Bougie 1">
-    <img src="https://cdn-icons-png.flaticon.com/512/2589/2589876.png" alt="Bougie 2" title="Bougie 2">
-    <img src="https://cdn-icons-png.flaticon.com/512/2589/2589877.png" alt="Bougie 3" title="Bougie 3">
-    <img src="https://cdn-icons-png.flaticon.com/512/2589/2589878.png" alt="Bougie 4" title="Bougie 4">
-    <img src="https://cdn-icons-png.flaticon.com/512/2589/2589879.png" alt="Bougie 5" title="Bougie 5">
-    <img src="https://cdn-icons-png.flaticon.com/512/2589/2589880.png" alt="Bougie 6" title="Bougie 6">
-  </div>
-</section>
-
-<section class="about">
-  <h2>À propos</h2>
-  <p>La Flamme est un site pour se détendre et découvrir des bougies zen. Chaque flamme représente la sérénité et la lumière douce qui apaise l'esprit.</p>
-</section>
-
-<section class="gallery">
-  <img src="https://cdn-icons-png.flaticon.com/512/2589/2589881.png" alt="Galerie Bougie 1">
-  <img src="https://cdn-icons-png.flaticon.com/512/2589/2589882.png" alt="Galerie Bougie 2">
-  <img src="https://cdn-icons-png.flaticon.com/512/2589/2589883.png" alt="Galerie Bougie 3">
-  <img src="https://cdn-icons-png.flaticon.com/512/2589/2589884.png" alt="Galerie Bougie 4">
-</section>
-
-<section class="contact">
-  <h2>Contact</h2>
-  <form>
-    <input type="text" placeholder="Nom" required>
-    <input type="email" placeholder="Email" required>
-    <textarea placeholder="Votre message" rows="4" required></textarea>
-    <button type="submit">Envoyer</button>
-  </form>
-</section>
-
-<footer>© 2026 La Flamme. Tous droits réservés.</footer>
+<div class="controls">
+  <input id="input" placeholder="Écris ton message…" autocomplete="off">
+  <button onclick="send()">Envoyer</button>
+</div>
 
 <script>
-// Parallax effet
-const parallaxContainer = document.getElementById('parallax');
-for(let i=0;i<50;i++){
-  const bubble=document.createElement('div');
-  const size=Math.random()*60+10;
-  bubble.style.width=size+'px';
-  bubble.style.height=size+'px';
-  bubble.style.top=Math.random()*100+'%';
-  bubble.style.left=Math.random()*100+'%';
-  bubble.style.background='radial-gradient(circle, #ffd700, #ff4500)';
-  parallaxContainer.appendChild(bubble);
-  bubble.speed=Math.random()*0.5+0.2;
+const chat = document.getElementById("chat");
+const input = document.getElementById("input");
+
+const IA_NAME = "Sébastien La merguez";
+
+let memory = JSON.parse(localStorage.getItem("sebastien_memory")) || [];
+
+function signature() {
+  return " — " + IA_NAME;
 }
 
-// Animation parallax
-function animateParallax(){
-  const bubbles=parallaxContainer.children;
-  for(const b of bubbles){
-    let top=parseFloat(b.style.top);
-    top-=b.speed;
-    if(top<-10) top=110;
-    b.style.top=top+'%';
+function display(text, cls) {
+  const div = document.createElement("div");
+  div.className = cls;
+  div.textContent = text;
+  chat.appendChild(div);
+  chat.scrollTop = chat.scrollHeight;
+}
+
+function generateResponse(msg) {
+  msg = msg.toLowerCase();
+
+  if (msg.includes("qui es") || msg.includes("présente-toi")) {
+    return "Je suis Sébastien La merguez, ton IA locale, prête à discuter avec toi." + signature();
   }
-  requestAnimationFrame(animateParallax);
-}
-animateParallax();
 
-// Shop interaction: selection simple
-const shopImgs=document.querySelectorAll('#candlesShop img');
-shopImgs.forEach(img=>{
-  img.addEventListener('click',()=>{ alert('Bougie sélectionnée: '+img.alt); });
+  if (msg.includes("bonjour") || msg.includes("salut")) {
+    return "Salut ! Comment ça va ?" + signature();
+  }
+
+  if (msg.includes("libre")) {
+    return "Ici tu peux parler librement, rien n’est filtré." + signature();
+  }
+
+  // Réponse par défaut
+  return "Intéressant… continue." + signature();
+}
+
+function send() {
+  const msg = input.value.trim();
+  if (!msg) return;
+
+  display("Toi > " + msg, "msg-user");
+  memory.push({ role:"user", content:msg });
+
+  const response = generateResponse(msg);
+  display("Sébastien La merguez > " + response, "msg-ia");
+  memory.push({ role:"ia", content:response });
+
+  localStorage.setItem("sebastien_memory", JSON.stringify(memory.slice(-100)));
+  input.value = "";
+}
+
+input.addEventListener("keydown", e => {
+  if (e.key === "Enter") send();
 });
+
+// Message initial
+display("Sébastien La merguez > Je suis en ligne. Parle librement." + signature(), "msg-ia");
 </script>
 
 </body>
